@@ -1,6 +1,7 @@
 package com.orabank.tfj.config;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -11,8 +12,6 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
 import java.util.List;
@@ -21,6 +20,9 @@ import java.util.List;
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
+
+    @Value("${cors.allowed.origins:*}")
+    private String allowedOrigins;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -40,79 +42,25 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        // Utiliser "*" pour permettre toutes les origines (plus simple pour Render)
-        // Note: allowedOriginPatterns avec "*" ne fonctionne pas avec allowCredentials(true)
-        // On utilise donc une liste explicite d'origines autorisées
-        config.setAllowedOrigins(List.of(
-            "https://tfj-planning-frontend.onrender.com",
-            "http://localhost:4200",
-            "http://localhost:3000"
-        ));
+        // Autoriser toutes les origines pour Render (par défaut "*")
+        // Peut être configuré via la variable d'environnement CORS_ALLOWED_ORIGINS
+        if ("*".equals(allowedOrigins)) {
+            config.setAllowedOrigins(List.of("*"));
+        } else {
+            config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        }
         config.setAllowedMethods(Arrays.asList(
             "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
         config.setAllowedHeaders(List.of("*"));
         config.setExposedHeaders(Arrays.asList(
-            "Authorization", "Content-Disposition", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"
+            "Authorization", "Content-Disposition", "Access-Control-Allow-Origin"
         ));
-        config.setAllowCredentials(true);
+        config.setAllowCredentials(false);
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
-    }
-    
-    /**
-     * Configuration CORS supplémentaire pour Spring MVC
-     * Cette configuration s'applique avant le filtre de sécurité Spring Security
-     */
-    @Bean
-    public org.springframework.web.filter.CorsFilter corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        CorsConfiguration config = new CorsConfiguration();
-        
-        // Utiliser la même configuration que ci-dessus
-        config.setAllowedOrigins(List.of(
-            "https://tfj-planning-frontend.onrender.com",
-            "http://localhost:4200",
-            "http://localhost:3000"
-        ));
-        config.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
-        ));
-        config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(Arrays.asList(
-            "Authorization", "Content-Disposition", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"
-        ));
-        config.setAllowCredentials(true);
-        config.setMaxAge(3600L);
-        
-        source.registerCorsConfiguration("/**", config);
-        return new org.springframework.web.filter.CorsFilter(source);
-    }
-
-    /**
-     * Configuration CORS additionnelle via WebMvcConfigurer
-     * Pour s'assurer que CORS fonctionne correctement avec Spring MVC
-     */
-    @Bean
-    public WebMvcConfigurer corsConfigurer() {
-        return new WebMvcConfigurer() {
-            @Override
-            public void addCorsMappings(CorsRegistry registry) {
-                registry.addMapping("/**")
-                    .allowedOrigins(
-                        "https://tfj-planning-frontend.onrender.com",
-                        "http://localhost:4200",
-                        "http://localhost:3000"
-                    )
-                    .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")
-                    .allowedHeaders("*")
-                    .exposedHeaders("Authorization", "Content-Disposition", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials")
-                    .allowCredentials(true)
-                    .maxAge(3600);
-            }
-        };
     }
 }
